--- a/default.env
+++ b/default.env
@@ -49,7 +49,7 @@ DDNS_PROXY=true
 # and in Lodestar it is, sneakily, the target count, not the minimum
 CL_MAX_PEER_COUNT=
 CL_MIN_PEER_COUNT=
-# Maximum active peers for EL. EL_MIN_PEER_COUNT is used for Besu, it's the minimum
+# Maximum active peers for EL. EL_MIN_PEER_COUNT is used for Akula and for Besu. In Besu it's the minimum
 # peer count before fast sync starts
 EL_MAX_PEER_COUNT=
 EL_MIN_PEER_COUNT=
