--- a/akula/Dockerfile.source
+++ b/akula/Dockerfile.source
@@ -37,6 +37,12 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install 
 
 ARG USER=akula
 ARG UID=10000
+# GID 10002 is deliberate so it can exchange secret with CL
+ARG GID=10002
+
+RUN addgroup \
+    --gid "${GID}" \
+    "${USER}"
 
 # See https://stackoverflow.com/a/55757473/12429735RUN
 RUN adduser \
@@ -46,6 +52,7 @@ RUN adduser \
     --shell "/sbin/nologin" \
     --no-create-home \
     --uid "${UID}" \
+    --ingroup "${USER}" \
     "${USER}"
 
 # Create data mount point with permissions
