--- a/cl-shared.yml
+++ b/cl-shared.yml
@@ -2,4 +2,4 @@ version: "3.4"
 services:
   consensus:
     ports:
-      - 5052:5052/tcp
+      - ${HOST_IP:-0.0.0.0}:${CL_REST_PORT:-5052}:${CL_REST_PORT:-5052}/tcp
