rebased set ip for docker host

--- a/erigon.yml
+++ b/erigon.yml
@@ -30,11 +30,11 @@ services:
       - /etc/localtime:/etc/localtime:ro
       - jwtsecret:/var/lib/erigon/ee-secret
     ports:
-      - ${EL_P2P_PORT-30303}:${EL_P2P_PORT:-30303}/tcp
-      - ${EL_P2P_PORT-30303}:${EL_P2P_PORT:-30303}/udp
+      - ${HOST_IP:-0.0.0.0}:${EL_P2P_PORT-30303}:${EL_P2P_PORT:-30303}/tcp
+      - ${HOST_IP:-0.0.0.0}:${EL_P2P_PORT-30303}:${EL_P2P_PORT:-30303}/udp
       # torrent ports
-      - ${ERIGON_TORRENT_PORT:-42069}:${ERIGON_TORRENT_PORT:-42069}/tcp
-      - ${ERIGON_TORRENT_PORT:-42069}:${ERIGON_TORRENT_PORT:-42069}/udp
+      - ${HOST_IP:-0.0.0.0}:${ERIGON_TORRENT_PORT:-42069}:${ERIGON_TORRENT_PORT:-42069}/tcp
+      - ${HOST_IP:-0.0.0.0}:${ERIGON_TORRENT_PORT:-42069}:${ERIGON_TORRENT_PORT:-42069}/udp
     networks:
       default:
         aliases:
