--- a/prysm-web-shared.yml
+++ b/prysm-web-shared.yml
@@ -2,4 +2,4 @@ version: "3.4"
 services:
   validator:
     ports:
-      - ${KEY_API_PORT:-7500}:${KEY_API_PORT:-7500}/tcp
+      - ${HOST_IP:-0.0.0.0}:${KEY_API_PORT:-7500}:${KEY_API_PORT:-7500}/tcp
