--- a/default.env
+++ b/default.env
@@ -106,8 +106,8 @@ JWT_SECRET=
 DISTRIBUTED=
 # Authenticated execution client endpoint. This default uses the execution node container.
 EL_NODE=http://execution:8551
-# Consensus client address. This could be comma-separated for Lighthouse, with failover,
-# or could just be a remote consensus client URL for Teku, Lighthouse or Prysm "validator only" setups. Not in use for Nimbus.
+# Consensus client address. This could be comma-separated for Lighthouse or Teku VC clients, with failover,
+# or could just be a remote consensus client URL for "validator only" setups. Not in use for Nimbus.
 CL_NODE=http://consensus:5052
 
 # You can set specific version targets and choose binary or compiled from source builds below,
