--- a/besu.yml
+++ b/besu.yml
@@ -1,15 +1,15 @@
-version: "3.4"
+version: "3.9"
 x-logging: &logging
   logging:
     driver: json-file
     options:
-      max-size: 10m
+      max-size: 100m
       max-file: "3"
       tag: '{{.ImageName}}|{{.Name}}|{{.ImageFullID}}|{{.FullID}}'
 
 services:
   execution:
-    restart: "${RESTART}"
+    restart: "unless-stopped"
     stop_grace_period: 3m
     build:
       context: ./besu
@@ -18,21 +18,27 @@ services:
         - BUILD_TARGET=${BESU_SRC_BUILD_TARGET}
         - DOCKER_TAG=${BESU_DOCKER_TAG}
     image: besu:local
-    user: besu
+# Root so a chown can happen for the secret, then gosu into besu. This can become besu again
+# after merge
+    user: root
     environment:
       - JAVA_OPTS=-Xmx4g
+      - JWT_SECRET=${JWT_SECRET}
+      - OVERRIDE_TTD=${OVERRIDE_TTD}
     volumes:
       - besu-eth1-data:/var/lib/besu
       - /etc/localtime:/etc/localtime:ro
+      - jwtsecret:/var/lib/besu/ee-secret
     ports:
-      - ${EL_P2P_PORT:-30303}:${EL_P2P_PORT:-30303}/tcp
-      - ${EL_P2P_PORT:-30303}:${EL_P2P_PORT:-30303}/udp
+      - ${HOST_IP:-0.0.0.0}:${EL_P2P_PORT:-30303}:${EL_P2P_PORT:-30303}/tcp
+      - ${HOST_IP:-0.0.0.0}:${EL_P2P_PORT:-30303}:${EL_P2P_PORT:-30303}/udp
     networks:
       default:
         aliases:
           - eth1
     <<: *logging
     entrypoint:
+      - docker-entrypoint.sh
       - /opt/besu/bin/besu
       - --data-path
       - /var/lib/besu
@@ -59,19 +65,21 @@ services:
       - --fast-sync-min-peers
       - ${EL_MIN_PEER_COUNT:-5}
       - --host-allowlist=*
+      - --engine-host-allowlist=*
+      - --engine-jwt-secret=/var/lib/besu/ee-secret/jwtsecret
+      - --engine-rpc-port=${EE_PORT:-8551}
       - --logging
       - ${LOG_LEVEL}
       - --network
-      - ${EL_NETWORK:-goerli}
+      - ${NETWORK}
       - --metrics-enabled
       - --metrics-host
       - 0.0.0.0
       - --metrics-port
       - "6060"
       - --data-storage-format=BONSAI
-      - --sync-mode=X_SNAP
-  eth:
-    depends_on:
-      - execution
+      - --sync-mode=X_CHECKPOINT
+#      - --sync-mode=X_SNAP
 volumes:
   besu-eth1-data:
+  jwtsecret:
