--- a/cl-shared.yml
+++ b/cl-shared.yml
@@ -1,5 +1,5 @@
-version: "3.4"
+version: "3.9"
 services:
   consensus:
     ports:
-      - 5052:5052/tcp
+      - ${HOST_IP:-0.0.0.0}:${CL_REST_PORT:-5052}:${CL_REST_PORT:-5052}/tcp
