--- a/el-shared.yml
+++ b/el-shared.yml
@@ -1,9 +1,7 @@
-# To be used in conjunction with erigon.yml, nm.yml, besu.yml or geth.yml
-version: "3.4"
+# To be used in conjunction with erigon.yml, nethermind.yml, besu.yml or geth.yml
+version: "3.9"
 services:
   execution:
     ports:
-      - ${EL_RPC_PORT}:${EL_RPC_PORT:-8545}/tcp
-      - ${EL_WS_PORT}:${EL_WS_PORT:-8546}/tcp
-  eth:
-    image: tianon/true
+      - ${HOST_IP:-0.0.0.0}:${EL_RPC_PORT}:${EL_RPC_PORT:-8545}/tcp
+      - ${HOST_IP:-0.0.0.0}:${EL_WS_PORT}:${EL_WS_PORT:-8546}/tcp
