--- a/el-traefik.yml
+++ b/el-traefik.yml
@@ -1,5 +1,5 @@
-# To be used in conjunction with erigon.yml, nm.yml, besu.yml or geth.yml
-version: "3.4"
+# To be used in conjunction with erigon.yml, nethermind.yml, besu.yml or geth.yml
+version: "3.9"
 services:
   execution:
     labels:
@@ -8,12 +8,17 @@ services:
       - traefik.http.routers.el.entrypoints=websecure
       - traefik.http.routers.el.rule=Host(`${EL_HOST:-el}.${DOMAIN}`)
       - traefik.http.routers.el.tls.certresolver=letsencrypt
+      - traefik.http.routers.ellb.service=el
+      - traefik.http.routers.ellb.entrypoints=websecure
+      - traefik.http.routers.ellb.rule=Host(`${EL_LB:-el-lb}.${DOMAIN}`)
+      - traefik.http.routers.ellb.tls.certresolver=letsencrypt
       - traefik.http.services.el.loadbalancer.server.port=${EL_RPC_PORT:-8545}
       - traefik.http.routers.elws.service=elws
       - traefik.http.routers.elws.entrypoints=websecure
       - traefik.http.routers.elws.rule=Host(`${EL_WS_HOST:-elws}.${DOMAIN}`)
       - traefik.http.routers.elws.tls.certresolver=letsencrypt
+      - traefik.http.routers.elwslb.service=elws
+      - traefik.http.routers.elwslb.entrypoints=websecure
+      - traefik.http.routers.elwslb.rule=Host(`${EL_WS_LB:-elws-lb}.${DOMAIN}`)
+      - traefik.http.routers.elwslb.tls.certresolver=letsencrypt
       - traefik.http.services.elws.loadbalancer.server.port=${EL_WS_PORT:-8546}
-
-  eth:
-    image: tianon/true
