--- a/grafana-shared.yml
+++ b/grafana-shared.yml
@@ -1,8 +1,8 @@
-version: "3.4"
+version: "3.9"
 services:
   grafana:
     ports:
-      - ${GRAFANA_PORT}:${GRAFANA_PORT}/tcp
+      - ${HOST_IP:-0.0.0.0}:${GRAFANA_PORT}:${GRAFANA_PORT}/tcp
 #  prometheus:
 #    ports:
 #      - 9090:9090/tcp
