--- a/lighthouse-base.yml
+++ b/lighthouse-base.yml
@@ -1,15 +1,15 @@
-version: "3.4"
+version: "3.9"
 x-logging: &logging
   logging:
     driver: json-file
     options:
-      max-size: 10m
+      max-size: 100m
       max-file: "3"
       tag: '{{.ImageName}}|{{.Name}}|{{.ImageFullID}}|{{.FullID}}'
 
 services:
   consensus:
-    restart: "${RESTART}"
+    restart: "unless-stopped"
     build:
       context: ./lighthouse
       dockerfile: ${LH_DOCKERFILE}
@@ -22,12 +22,18 @@ services:
     volumes:
       - lhbeacon-data:/var/lib/lighthouse
       - /etc/localtime:/etc/localtime:ro
+      - jwtsecret:/var/lib/lighthouse/beacon/ee-secret
     environment:
       - RAPID_SYNC_URL=${RAPID_SYNC_URL}
+      - JWT_SECRET=${JWT_SECRET}
+      - OVERRIDE_TTD=${OVERRIDE_TTD}
+      - MEV_BOOST=${MEV_BOOST}
+      - BEACON_STATS_API=${BEACON_STATS_API}
+      - BEACON_STATS_MACHINE=${BEACON_STATS_MACHINE}
       - MALLOC_ARENA_MAX=4
     ports:
-      - ${CL_P2P_PORT:-9000}:${CL_P2P_PORT:-9000}/tcp
-      - ${CL_P2P_PORT:-9000}:${CL_P2P_PORT:-9000}/udp
+      - ${HOST_IP:-0.0.0.0}:${CL_P2P_PORT:-9000}:${CL_P2P_PORT:-9000}/tcp
+      - ${HOST_IP:-0.0.0.0}:${CL_P2P_PORT:-9000}:${CL_P2P_PORT:-9000}/udp
     networks:
       default:
         aliases:
@@ -44,17 +50,17 @@ services:
       - --http-address
       - 0.0.0.0
       - --http-port
-      - "5052"
+      - ${CL_REST_PORT:-5052}
       - --network
       - ${NETWORK}
       - --port
       - ${CL_P2P_PORT:-9000}
       - --target-peers
       - ${CL_MAX_PEER_COUNT:-80}
-      - --eth1-endpoints
-      - ${EL_NODE:-http://execution:8545}
-      - --eth1-blocks-per-log-query
-      - "150"
+      - --execution-endpoint
+      - ${EL_NODE}
+      - --execution-jwt
+      - /var/lib/lighthouse/beacon/ee-secret/jwtsecret
       - --debug-level=${LOG_LEVEL}
       - --metrics
       - --metrics-address
@@ -62,15 +68,25 @@ services:
       - --metrics-port
       - "8008"
       - --validator-monitor-auto
+      - --suggested-fee-recipient
+      - ${FEE_RECIPIENT}
+
   validator:
-    restart: "${RESTART}"
+    restart: "unless-stopped"
     image: lighthouse:local
     user: lhvalidator
+    environment:
+      - OVERRIDE_TTD=${OVERRIDE_TTD}
+      - MEV_BOOST=${MEV_BOOST}
+      - BEACON_STATS_API=${BEACON_STATS_API}
+      - BEACON_STATS_MACHINE=${BEACON_STATS_MACHINE}
+      - DOPPELGANGER=${DOPPELGANGER}
     volumes:
       - lhvalidator-data:/var/lib/lighthouse
       - /etc/localtime:/etc/localtime:ro
     <<: *logging
     entrypoint:
+      - docker-entrypoint-vc.sh
       - lighthouse
       - vc
       - --datadir
@@ -98,20 +114,9 @@ services:
       - ${FEE_RECIPIENT}
     depends_on:
       - consensus
-  get-keyapi-token:
-    restart: "no"
-    image: alpine:latest
-    user: "10000"
-    volumes:
-      - lhvalidator-data:/var/lib/lighthouse
-      - /etc/localtime:/etc/localtime:ro
-    <<: *logging
-    entrypoint: ["/bin/sh","-c"]
-    command:
-      - |
-        cat /var/lib/lighthouse/validators/api-token.txt
-        echo
+
   validator-import:
+    profiles: ["tools"]
     restart: "no"
     image: lighthouse:local
     user: root
@@ -135,7 +140,9 @@ services:
       - --network
       - ${NETWORK}
       - --debug-level=${LOG_LEVEL}
+
   validator-exit:
+    profiles: ["tools"]
     restart: "no"
     image: lighthouse:local
     user: root
@@ -159,46 +166,29 @@ services:
       - --keystore
     depends_on:
       - consensus
-  validator-account:
+
+  validator-keys:
+    profiles: ["tools"]
     restart: "no"
-    image: lighthouse:local
-    user: lhvalidator
+    build:
+      context: ./vc-utils
+    image: vc-utils:local
+    user: root
     volumes:
       - lhvalidator-data:/var/lib/lighthouse
+      - ./.eth/validator_keys:/validator_keys
       - /etc/localtime:/etc/localtime:ro
-    entrypoint:
-      - lighthouse
-      - account
-      - validator
-      - --datadir
-      - /var/lib/lighthouse
-      - --network
-      - ${NETWORK}
-      - --debug-level=${LOG_LEVEL}
-  validator-list:
-    restart: "no"
-    image: lighthouse:local
-    user: lhvalidator
-    volumes:
-      - lhvalidator-data:/var/lib/lighthouse
-      - ./.eth:/interchange
-      - /etc/localtime:/etc/localtime:ro
-    entrypoint:
-      - lighthouse
-      - account
-      - validator
-      - list
-      - --datadir
-      - /var/lib/lighthouse
-      - --network
-      - ${NETWORK}
-      - --debug-level=${LOG_LEVEL}
-  eth:
-    image: tianon/true
-    restart: "no"
+    environment:
+      - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD:-}
+      - KEY_API_PORT=${KEY_API_PORT:-7500}
     depends_on:
-      - consensus
       - validator
+    entrypoint:
+      - keymanager.sh
+      - /var/lib/lighthouse/validators/api-token.txt
+      - validator
+
 volumes:
   lhbeacon-data:
   lhvalidator-data:
+  jwtsecret:
