--- a/lighthouse-vc-only.yml
+++ b/lighthouse-vc-only.yml
@@ -1,15 +1,15 @@
-version: "3.4"
+version: "3.9"
 x-logging: &logging
   logging:
     driver: json-file
     options:
-      max-size: 10m
+      max-size: 100m
       max-file: "3"
       tag: '{{.ImageName}}|{{.Name}}|{{.ImageFullID}}|{{.FullID}}'
 
 services:
   validator:
-    restart: "${RESTART}"
+    restart: "unless-stopped"
     build:
       context: ./lighthouse
       dockerfile: ${LH_DOCKERFILE}
@@ -18,11 +18,18 @@ services:
         - DOCKER_TAG=${LH_DOCKER_TAG}
     image: lighthouse:local
     user: lhvalidator
+    environment:
+      - OVERRIDE_TTD=${OVERRIDE_TTD}
+      - MEV_BOOST=${MEV_BOOST}
+      - BEACON_STATS_API=${BEACON_STATS_API}
+      - BEACON_STATS_MACHINE=${BEACON_STATS_MACHINE}
+      - DOPPELGANGER=${DOPPELGANGER}
     volumes:
       - lhvalidator-data:/var/lib/lighthouse
       - /etc/localtime:/etc/localtime:ro
     <<: *logging
     entrypoint:
+      - docker-entrypoint-vc.sh
       - lighthouse
       - vc
       - --datadir
@@ -48,20 +55,9 @@ services:
       - --unencrypted-http-transport
       - --suggested-fee-recipient
       - ${FEE_RECIPIENT}
-  get-keyapi-token:
-    restart: "no"
-    image: alpine:latest
-    user: "10000"
-    volumes:
-      - lhvalidator-data:/var/lib/lighthouse
-      - /etc/localtime:/etc/localtime:ro
-    <<: *logging
-    entrypoint: ["/bin/sh","-c"]
-    command:
-      - |
-        cat /var/lib/lighthouse/validators/api-token.txt
-        echo
+
   validator-import:
+    profiles: ["tools"]
     restart: "no"
     image: lighthouse:local
     user: root
@@ -85,7 +81,9 @@ services:
       - --network
       - ${NETWORK}
       - --debug-level=${LOG_LEVEL}
+
   validator-exit:
+    profiles: ["tools"]
     restart: "no"
     image: lighthouse:local
     user: root
@@ -107,45 +105,27 @@ services:
       - ${NETWORK}
       - --debug-level=${LOG_LEVEL}
       - --keystore
-  validator-account:
+
+  validator-keys:
+    profiles: ["tools"]
     restart: "no"
-    image: lighthouse:local
-    user: lhvalidator
+    build:
+      context: ./vc-utils
+    image: vc-utils:local
+    user: root
     volumes:
       - lhvalidator-data:/var/lib/lighthouse
-      - ./.eth:/interchange
+      - ./.eth/validator_keys:/validator_keys
       - /etc/localtime:/etc/localtime:ro
-    entrypoint:
-      - lighthouse
-      - account
-      - validator
-      - --datadir
-      - /var/lib/lighthouse
-      - --network
-      - ${NETWORK}
-      - --debug-level=${LOG_LEVEL}
-  validator-list:
-    restart: "no"
-    image: lighthouse:local
-    user: lhvalidator
-    volumes:
-      - lhvalidator-data:/var/lib/lighthouse
-      - ./.eth:/interchange
-      - /etc/localtime:/etc/localtime:ro
-    entrypoint:
-      - lighthouse
-      - account
-      - validator
-      - list
-      - --datadir
-      - /var/lib/lighthouse
-      - --network
-      - ${NETWORK}
-      - --debug-level=${LOG_LEVEL}
-  eth:
-    image: tianon/true
-    restart: "no"
+    environment:
+      - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD:-}
+      - KEY_API_PORT=${KEY_API_PORT:-7500}
     depends_on:
       - validator
+    entrypoint:
+      - keymanager.sh
+      - /var/lib/lighthouse/validators/api-token.txt
+      - validator
+
 volumes:
   lhvalidator-data:
