--- a/traefik-aws.yml
+++ b/traefik-aws.yml
@@ -1,9 +1,9 @@
-version: "3.4"
+version: "3.9"
 x-logging: &logging
   logging:
     driver: json-file
     options:
-      max-size: 10m
+      max-size: 100m
       max-file: "3"
       tag: '{{.ImageName}}|{{.Name}}|{{.ImageFullID}}|{{.FullID}}'
 
@@ -12,7 +12,7 @@ services:
     image: traefik-aws
     build:
       context: ./traefik
-    restart: ${RESTART}
+    restart: "unless-stopped"
     command:
 #      - --log.level=DEBUG
 #      - --accesslog=true
@@ -31,8 +31,8 @@ services:
       - --entrypoints.web.http.redirections.entrypoint.scheme=https
       - --entrypoints.websecure.address=:${TRAEFIK_WEB_PORT}
     ports:
-      - ${TRAEFIK_WEB_PORT}:${TRAEFIK_WEB_PORT}/tcp
-      - ${TRAEFIK_WEB_HTTP_PORT}:${TRAEFIK_WEB_HTTP_PORT}/tcp
+      - ${HOST_IP:-0.0.0.0}:${TRAEFIK_WEB_PORT}:${TRAEFIK_WEB_PORT}/tcp
+      - ${HOST_IP:-0.0.0.0}:${TRAEFIK_WEB_HTTP_PORT}:${TRAEFIK_WEB_HTTP_PORT}/tcp
     environment:
       - AWS_PROFILE=${AWS_PROFILE}
       - AWS_HOSTED_ZONE_ID=${AWS_HOSTED_ZONE_ID}
@@ -42,8 +42,5 @@ services:
       - ~/.aws:/root/.aws:ro
       - /etc/localtime:/etc/localtime:ro
     <<: *logging
-  eth:
-    depends_on:
-      - traefik
 volumes:
   certs:
