Nethermind merge-ready tag

--- a/default.env
+++ b/default.env
@@ -171,8 +171,8 @@ ERIGON_DOCKERFILE=Dockerfile.binary
 # Nethermind
 # SRC build target can be a tag or a branch
 NM_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
-NM_DOCKER_TAG=goerli_testing
-NM_DOCKERFILE=Dockerfile.dev
+NM_DOCKER_TAG=latest
+NM_DOCKERFILE=Dockerfile.binary
 
 # Go-Ethereum aka Geth
 # SRC build target can be a tag or a branch
