--- a/default.env
+++ b/default.env
@@ -119,7 +119,7 @@ CL_NODE=http://consensus:5052
 # The default source build targets build from the latest github tag
 
 # SSV
-SSV_NODE_TAG=latest
+SSV_NODE_TAG=v0.2.1-rc.7
 SSV2_NODE_TAG=latest
 
 # MEV-Boost
