Nimbus and Lodestar merge releases

--- a/default.env
+++ b/default.env
@@ -130,7 +130,7 @@ MEV_DOCKERFILE=Dockerfile.binary
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
 NIM_SRC_BUILD_TARGET=unstable
 NIM_DOCKER_TAG=multiarch-latest
-NIM_DOCKERFILE=Dockerfile.source
+NIM_DOCKERFILE=Dockerfile.binary
 
 # Teku
 # SRC build target can be a tag or a branch
@@ -153,7 +153,7 @@ PRYSM_DOCKERFILE=Dockerfile.binary
 # Lodestar
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
 LS_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
-LS_DOCKER_TAG=latest
+LS_DOCKER_TAG=next
 LS_DOCKERFILE=Dockerfile.binary
 
 # Besu
