--- a/lodestar-cl-only.yml
+++ b/lodestar-cl-only.yml
@@ -38,31 +38,25 @@ services:
       - --max-old-space-size=4096
       - /usr/app/node_modules/.bin/lodestar
       - beacon
-      - --rootDir
+      - --dataDir
       - /var/lib/lodestar/consensus
-      - --api.rest.enabled
-      - "true"
-      - --api.rest.host
+      - --rest.address
       - 0.0.0.0
-      - --api.rest.port
+      - --rest.port
       - ${CL_REST_PORT:-5052}
-      - --network.discv5.bindAddr
-      - "/ip4/0.0.0.0/udp/${CL_P2P_PORT:-9000}"
-      - --network.localMultiaddrs
-      - "/ip4/0.0.0.0/tcp/${CL_P2P_PORT:-9000}"
+      - --port
+      - ${CL_P2P_PORT:-9000}
       - --execution.urls
       - ${EL_NODE}
       - --jwt-secret
       - /var/lib/lodestar/consensus/ee-secret/jwtsecret
-      - --network.maxPeers
-      - ${CL_MAX_PEER_COUNT:-55}
-      - --network.targetPeers
+      - --targetPeers
       - ${CL_MIN_PEER_COUNT:-50}
       - --logLevel
       - ${LOG_LEVEL}
       - --network
       - ${NETWORK}
-      - --chain.defaultFeeRecipient
+      - --suggestedFeeRecipient
       - ${FEE_RECIPIENT}
     labels:
       - traefik.enable=true
