--- a/lodestar-base.yml
+++ b/lodestar-base.yml
@@ -38,31 +38,25 @@ services:
       - --max-old-space-size=4096
       - /usr/app/node_modules/.bin/lodestar
       - beacon
-      - --rootDir
+      - --dataDir
       - /var/lib/lodestar/consensus
-      - --api.rest.enabled
-      - "true"
-      - --api.rest.host
+      - --rest.address
       - 0.0.0.0
-      - --api.rest.port
+      - --rest.port
       - ${CL_REST_PORT:-5052}
-      - --network.discv5.bindAddr
-      - "/ip4/0.0.0.0/udp/${CL_P2P_PORT:-9000}"
-      - --network.localMultiaddrs
-      - "/ip4/0.0.0.0/tcp/${CL_P2P_PORT:-9000}"
+      - --port
+      - ${CL_P2P_PORT:-9000}
       - --execution.urls
       - ${EL_NODE}
       - --jwt-secret
       - /var/lib/lodestar/consensus/ee-secret/jwtsecret
-      - --network.maxPeers
-      - ${CL_MAX_PEER_COUNT:-55}
-      - --network.targetPeers
-      - ${CL_MIN_PEER_COUNT:-50}
+      - --targetPeers
+      - ${CL_MAX_PEER_COUNT:-50}
       - --logLevel
       - ${LOG_LEVEL}
       - --network
       - ${NETWORK}
-      - --chain.defaultFeeRecipient
+      - --suggestedFeeRecipient
       - ${FEE_RECIPIENT}
 
   validator:
@@ -84,12 +78,11 @@ services:
       - --max-old-space-size=4096
       - /usr/app/node_modules/.bin/lodestar
       - validator
-      - --rootDir
+      - --dataDir
       - /var/lib/lodestar/validators
       - --server
       - http://consensus:5052
-      - --keymanager.enabled
-      - "true"
+      - --keymanager
       - --keymanager.address
       - 0.0.0.0
       - --keymanager.port
@@ -100,7 +93,7 @@ services:
       - ${LOG_LEVEL}
       - --network
       - ${NETWORK}
-      - --defaultFeeRecipient
+      - --suggestedFeeRecipient
       - ${FEE_RECIPIENT}
 
   validator-import:
@@ -167,7 +160,6 @@ services:
       - ./.eth/validator_keys:/validator_keys
       - /etc/localtime:/etc/localtime:ro
     environment:
-      - LSBUGGED="true"
       - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD:-}
       - KEY_API_PORT=${KEY_API_PORT:-7500}
     depends_on:
