--- a/lodestar-vc-only.yml
+++ b/lodestar-vc-only.yml
@@ -25,12 +25,11 @@ services:
       - --max-old-space-size=4096
       - /usr/app/node_modules/.bin/lodestar
       - validator
-      - --rootDir
+      - --dataDir
       - /var/lib/lodestar/validators
       - --server
       - ${CL_NODE:-http://consensus:5052}
-      - --keymanager.enabled
-      - "true"
+      - --keymanager
       - --keymanager.address
       - 0.0.0.0
       - --keymanager.port
@@ -41,7 +40,7 @@ services:
       - ${LOG_LEVEL}
       - --network
       - ${NETWORK}
-      - --defaultFeeRecipient
+      - --suggestedFeeRecipient
       - ${FEE_RECIPIENT}
 
   validator-import:
@@ -106,7 +105,6 @@ services:
       - ./.eth/validator_keys:/validator_keys
       - /etc/localtime:/etc/localtime:ro
     environment:
-      - LSBUGGED="true"
       - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD:-}
       - KEY_API_PORT=${KEY_API_PORT:-7500}
     depends_on:
