Switch default Geth to source build to resolve regression bug

--- a/default.env
+++ b/default.env
@@ -175,10 +175,11 @@ NM_DOCKER_TAG=latest
 NM_DOCKERFILE=Dockerfile.binary
 
 # Go-Ethereum aka Geth
-# SRC build target can be a tag or a branch
-GETH_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
+# SRC build target can be a tag or a branch, or a pr as "pr-ID"
+#GETH_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
+GETH_SRC_BUILD_TARGET='pr-25576'
 GETH_DOCKER_TAG=stable
-GETH_DOCKERFILE=Dockerfile.binary
+GETH_DOCKERFILE=Dockerfile.source
 
 #Akula
 # SRC build target can be a tag or a branch
