--- a/lodestar-vc-only.yml
+++ b/lodestar-vc-only.yml
@@ -63,9 +63,9 @@ services:
       - /usr/app/node_modules/.bin/lodestar
       - validator
       - import
-      - --rootDir
+      - --dataDir
       - /var/lib/lodestar/validators
-      - --directory
+      - --importKeystores
       - /val_keys
       - --network
       - ${NETWORK}
@@ -84,7 +84,7 @@ services:
       - /usr/app/node_modules/.bin/lodestar
       - validator
       - voluntary-exit
-      - --rootDir
+      - --dataDir
       - /var/lib/lodestar/validators
       - --server
       - ${CL_NODE:-http://consensus:5052}
