--- a/default.env
+++ b/default.env
@@ -153,7 +153,7 @@ PRYSM_DOCKERFILE=Dockerfile.binary
 # Lodestar
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
 LS_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
-LS_DOCKER_TAG=next
+LS_DOCKER_TAG=latest
 LS_DOCKERFILE=Dockerfile.binary
 
 # Besu
