Switch Besu back to default snap sync

--- a/besu.yml
+++ b/besu.yml
@@ -78,8 +78,8 @@ services:
       - --metrics-port
       - "6060"
       - --data-storage-format=BONSAI
-      - --sync-mode=X_CHECKPOINT
-#      - --sync-mode=X_SNAP
+#      - --sync-mode=X_CHECKPOINT
+      - --sync-mode=X_SNAP
 volumes:
   besu-eth1-data:
   jwtsecret:
