--- a/default.env
+++ b/default.env
@@ -175,9 +175,9 @@ NM_DOCKER_TAG=latest
 NM_DOCKERFILE=Dockerfile.binary
 
 # Go-Ethereum aka Geth
-# SRC build target can be a tag or a branch, or a pr as "pr-ID"
+# SRC build target can be a tag, a branch, or a pr as "pr-ID"
 GETH_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
-GETH_DOCKER_TAG=v1.10.21
+GETH_DOCKER_TAG=stable
 GETH_DOCKERFILE=Dockerfile.binary
 
 #Akula
