--- a/default.env
+++ b/default.env
@@ -54,7 +54,7 @@ CL_MIN_PEER_COUNT=
 EL_MAX_PEER_COUNT=
 EL_MIN_PEER_COUNT=
 
-# Beaconcha.in API key for sending client stats. Automatic for Lighthouse, or with prysm-stats.yml,
+# Beaconcha.in API key for sending client stats. Automatic for Lighthouse and Teku, or with prysm-stats.yml,
 # source build only for Prysm as of Sept 2021.
 # Specify as just the API key, and give the machine name separately
 BEACON_STATS_API=
