Mention where the beaconcha.in API key hangs out

--- a/default.env
+++ b/default.env
@@ -56,7 +56,7 @@ EL_MIN_PEER_COUNT=
 
 # Beaconcha.in API key for sending client stats. Automatic for Lighthouse and Teku, or with prysm-stats.yml,
 # source build only for Prysm as of Sept 2021.
-# Specify as just the API key, and give the machine name separately
+# Specify as just the API key as found at https://beaconcha.in/user/settings#api, and give the machine name separately
 BEACON_STATS_API=
 BEACON_STATS_MACHINE=
 
