--- a/default.env
+++ b/default.env
@@ -54,7 +54,7 @@ EL_MAX_PEER_COUNT=
 EL_MIN_PEER_COUNT=
 
 # Beaconcha.in API key for sending client stats. Automatic for Lighthouse and Teku, or with prysm-stats.yml,
-# source build only for Prysm as of Sept 2021.
+# source build only for Prysm as of Sept 2021. Flags for mobile app client monitoring added in teku-base.yml
 # Specify as just the API key as found at https://beaconcha.in/user/settings#api, and give the machine name separately
 BEACON_STATS_API=
 BEACON_STATS_MACHINE=
