Add SIGILL guidance to default.env

--- a/default.env
+++ b/default.env
@@ -122,6 +122,7 @@ SSV_NODE_TAG=v0.2.1-rc.7
 SSV2_NODE_TAG=latest
 
 # MEV-Boost
+# If mev-boost terminates with a SIGILL, make this "latest-portable"
 MEV_DOCKER_TAG=latest
 MEV_DOCKERFILE=Dockerfile.binary
 
@@ -140,6 +141,7 @@ TEKU_DOCKERFILE=Dockerfile.binary
 # Lighthouse
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
 LH_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
+# If Lighthouse terminates with a SIGILL, make this "latest"
 LH_DOCKER_TAG=latest-modern
 LH_DOCKERFILE=Dockerfile.binary
 
