mev-boost add relay check; ethd config add flashbots mainnet relay

--- a/mev-boost.yml
+++ b/mev-boost.yml
@@ -20,6 +20,7 @@ services:
       - -addr
       - 0.0.0.0:18550
       - -${NETWORK}
+      - -relay-check
       - -relays
       - ${MEV_RELAYS}
     <<: *logging
