More resilient checkpoint sync for Lodestar and Nimbus; configurable mev-boost target

--- a/default.env
+++ b/default.env
@@ -111,6 +111,8 @@ EL_NODE=http://execution:8551
 # Consensus client address. This could be comma-separated for Lighthouse or Teku VC clients, with failover,
 # or could just be a remote consensus client URL for "validator only" setups. Not in use for Nimbus.
 CL_NODE=http://consensus:5052
+# MEV-boost address. This would only be changed for Vouch setups
+MEV_NODE=http://mev-boost:18550
 
 # You can set specific version targets and choose binary or compiled from source builds below,
 # via "Dockerfile.binary" or "Dockerfile.source"
