--- a/nimbus-base.yml
+++ b/nimbus-base.yml
@@ -29,6 +29,7 @@ services:
       - JWT_SECRET=${JWT_SECRET}
       - OVERRIDE_TTD=${OVERRIDE_TTD}
       - MEV_BOOST=${MEV_BOOST}
+      - MEV_NODE=${MEV_NODE}
       - DOPPELGANGER=${DOPPELGANGER}
     ports:
       - ${HOST_IP:-0.0.0.0}:${CL_P2P_PORT:-9000}:${CL_P2P_PORT:-9000}/tcp
