Teku exit; default rapid sync

--- a/teku-base.yml
+++ b/teku-base.yml
@@ -99,6 +99,7 @@ services:
       - voluntary-exit
       - --beacon-node-api-endpoint=http://consensus:5052
       - --validator-keys=/var/lib/teku/validator-keys:/var/lib/teku/validator-passwords
+      - --validator-keys=/var/lib/teku/validator/key-manager/local:/var/lib/teku/validator/key-manager/local-passwords
 
   validator-keys:
     profiles: ["tools"]
